infra/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citramac-frontend
spec:
  selector:
    app: citramac-frontend
  ports:
    - port: 80
      targetPort: 80
